--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -19,10 +19,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'home_page' %}active{% endif %}" href="{{ url_for('home_page') }}">Home</a>
+            <a class="nav-link {% if request.endpoint == 'main.home_page' %}active{% endif %}" href="{{ url_for('main.home_page') }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'market_page' %}active{% endif %}" href="{{ url_for('market_page') }}">Market</a>
+            <a class="nav-link {% if request.endpoint == 'main.market_page' %}active{% endif %}" href="{{ url_for('main.market_page') }}">Market</a>
           </li>
         </ul>
         <ul class="navbar-nav">
