--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -18,26 +18,50 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'main.home_page' %}active{% endif %}" href="{{ url_for('main.home_page') }}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'main.market_page' %}active{% endif %}" href="{{ url_for('main.market_page') }}">Market</a>
-          </li>
+          {% if request.path not in ['/login', '/registration'] %}
+            <li class="nav-item">
+              <a class="nav-link {% if request.endpoint == 'main.home_page' %} active {% endif %}" href="{{ url_for('main.home_page') }}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if request.endpoint == 'main.market_page' %} active {% endif %}" href="{{ url_for('main.market_page') }}">Market</a>
+            </li>
+          {% endif %}
         </ul>
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
-          </li>
+          {% if request.path == '/registration' %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.login_page') }}">Login</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.register_page') }}">Register</a>
+            </li>
+          {% endif %}
         </ul>
       </div>
     </nav>
+    <div class="container mt-5">
+      <div class="alert-container">
+        <div class="col">
+          {% with messages=get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="col-4">
+                  <div class="alert alert-{{ category }}" role="alert">
+                    <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    {{ message }}
+                  </div>
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+      </div>
+    </div>
     {% block content %}
 
     {% endblock %}
+
     <!-- Future Content here -->
 
     <!-- Optional JavaScript -->
@@ -51,6 +75,17 @@
     body {
       background-color: #212121;
       color: white;
+    }
+    
+    /* Custom styles to position alerts at the top */
+    .alert-container {
+      position: fixed; /* Fixed positioning */
+      top: 10%; /* Align to the top */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Adjust for centering */
+      width: 100%; /* Full width */
+      z-index: 1050; /* Higher z-index to be on top */
+      padding: 1rem; /* Add some padding */
     }
   </style>
 </html>
